# multiagent-customer-support

./: pyproject.toml
src/multiagent-customer-support/config/: agents.yaml
src/multiagent_customer_support/: crew.py  main.py
src/multiagent_customer_support/config/: tools.yaml
