[project]
name = "multiagent-customer-support"
version = "0.1.0"
description = "multiagent-customer-support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
multiagent-customer-support = "multiagent-customer-support.main:run"
run_crew = "multiagent-customer-support.main:run"
train = "multiagent-customer-support.main:train"
replay = "multiagent-customer-support.main:replay"
test = "multiagent-customer-support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
